# ProjetoLP1

./: .gitignore  CMakeLists.txt  main.cpp
database_manager/: CMakeLists.txt  database_manager.cpp
database_manager/includes/: database_manager.hpp
models/: CMakeLists.txt  Diretor.cpp  Funcionario.cpp  Gerente.cpp  Presidente.cpp
models/includes/: Diretor.h  Funcionario.h  Gerente.h  Presidente.h
terminal_ui/: CMakeLists.txt  terminalUi.cpp
terminal_ui/includes/: terminalUi.hpp
utils/: CMakeLists.txt  string_utils.cpp
utils/includes/: string_utils.hpp
